Add service worker and icon generation script for PWA support
- Implemented a service worker (sw.js) with caching strategies for offline support.
- Added a script (generate-icons.cjs) to create themed bomb icons in PNG format for the PWA.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <meta name="description" content="What'a Bomb! - A fast-paced Bomberman-style game" />
     <meta name="theme-color" content="#1a1a2e" />
     <link rel="manifest" href="./manifest.json" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" href="./icon-192.png" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>What'a Bomb! 💣</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js').catch(() => {})
+        })
+      }
+    </script>
   </body>
 </html>
